# solana_serialization_benchmark

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  gen_flatbuffers.sh
.github/: .env  file-filters.yml
.github/workflows/: build-rust-client.yml
clients/js/: CONTRIBUTING.md  README.md  package.json  tsconfig.json
clients/rust/: CONTRIBUTING.md  Cargo.toml  README.md
clients/rust/src/: lib.rs
clients/rust/tests/: create.rs
configs/: kinobi.cjs  shank.cjs  validator.cjs
docs/: index.html  output.json
flatbuffers_schema/: basic.fbs  collection.fbs  state.fbs
idls/: solana_serialization_benchmark_program.json
page/: index.html  output.json
programs/solana-serialization-benchmark/: Cargo.toml  README.md  rustfmt.toml
programs/solana-serialization-benchmark/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
programs/solana-serialization-benchmark/src/processor/: mod.rs
programs/solana-serialization-benchmark/src/processor/bincode_processor/: mod.rs
programs/solana-serialization-benchmark/src/processor/bitcode_processor/: mod.rs
programs/solana-serialization-benchmark/src/processor/borsh_processor/: mod.rs
programs/solana-serialization-benchmark/src/processor/fb_processor/: mod.rs
programs/solana-serialization-benchmark/src/processor/none_processor/: mod.rs
programs/solana-serialization-benchmark/src/processor/processor.template/: mod.rs
programs/solana-serialization-benchmark/src/processor/rkyv_processor/: mod.rs
programs/solana-serialization-benchmark/src/state/: bincode_state.rs  bitcode_state.rs  borsh_state.rs  mod.rs  none_state.rs  rkyv_state.rs  state.template.rs
(+15 files in other folders)
