[package]
edition = "2021"
license-file = "../../LICENSE"
name = "solana-serialization-benchmark-program"
publish = false
readme = "./README.md"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "^0.10"
num-derive = "^0.4"
num-traits = "^0.2"
shank = "0.4.2"
solana-program = "~1.16"
thiserror = "^1.0"
