[package]
  edition = "2021"
  license-file = "../../LICENSE"
  name = "solana-serialization-benchmark-program"
  publish = false
  readme = "./README.md"
  version = "0.1.0"

[lib]
  crate-type = ["cdylib", "lib"]

[dependencies]
  bincode = "1.3.3"
  borsh = "^0.10"
  num-derive = "^0.4"
  num-traits = "^0.2"
  rkyv = "0.7.44"
  serde = { version = "1.0.204", features = ["derive"] }
  shank = "0.4.2"
  solana-program = "~1.16"
  thiserror = "^1.0"

  # Add required dependencies for the new serialization libraries here.
